# falcon-det1024

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md
docs/adr/: 0001-cffi-api-mode.md  0002-abi3-single-wheel.md  0003-defer-free-threaded-wheels.md  0004-cibuildwheel-over-handrolled-matrix.md  0005-minimum-python-3-10.md  0006-minimal-public-surface.md  README.md
src/falcon_det1024/: __init__.py  _bindings.py  _build.py  _core.py  _falcon.pyi  _lib.py  api.py  bindings.py  constants.py  exceptions.py
tests/: conftest.py  test_bytes_like.py  test_constants.py  test_ct.py  test_determinism.py  test_errors.py  test_kat.py  test_public_surface.py  test_roundtrip.py  test_tamper.py
